server/server_logs.txt
[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): src\**\*[39m
[33m[nodemon] watching extensions: ts[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
Server is running heavily on http://localhost:4000
Initial Boot: Attempting to connect to active DB: sqlserver Setup Config
Successfully connected to sqlserver database!
Failed to initialize TypeORM connection: QueryFailedError: Error: Could not drop constraint. See previous errors.
    at C:\Users\berna\bloo\server\node_modules\typeorm\src\driver\sqlserver\SqlServerQueryRunner.ts:277:30
    at C:\Users\berna\bloo\server\node_modules\mssql\lib\base\request.js:440:25
    at Request.userCallback (C:\Users\berna\bloo\server\node_modules\mssql\lib\tedious\request.js:492:15)
    at Request.callback (C:\Users\berna\bloo\server\node_modules\tedious\src\request.ts:379:14)
    at Parser.onEndOfMessage (C:\Users\berna\bloo\server\node_modules\tedious\src\connection.ts:3713:22)
    at Object.onceWrapper (node:events:622:28)
    at Parser.emit (node:events:508:28)
    at Parser.emit (node:domain:489:12)
    at Readable.<anonymous> (C:\Users\berna\bloo\server\node_modules\tedious\src\token\token-stream-parser.ts:30:12)
    at Readable.emit (node:events:508:28) {
  query: 'ALTER TABLE "users" DROP CONSTRAINT "DF_222b9702c1d8fecb0470823350a"',
  parameters: undefined,
  driverError: RequestError: Could not drop constraint. See previous errors.
      at handleError (C:\Users\berna\bloo\server\node_modules\mssql\lib\tedious\request.js:384:15)
      at Connection.emit (node:events:508:28)
      at Connection.emit (node:domain:489:12)
      at Connection.emit (C:\Users\berna\bloo\server\node_modules\tedious\src\connection.ts:1902:18)
      at RequestTokenHandler.onErrorMessage (C:\Users\berna\bloo\server\node_modules\tedious\src\token\handler.ts:388:21)
      at Readable.<anonymous> (C:\Users\berna\bloo\server\node_modules\tedious\src\token\token-stream-parser.ts:22:55)
      at Readable.emit (node:events:508:28)
      at Readable.emit (node:domain:489:12)
      at addChunk (node:internal/streams/readable:559:12)
      at readableAddChunkPushObjectMode (node:internal/streams/readable:536:3) {
    code: 'EREQUEST',
    originalError: Error: Could not drop constraint. See previous errors.
        at handleError (C:\Users\berna\bloo\server\node_modules\mssql\lib\tedious\request.js:382:19)
        at Connection.emit (node:events:508:28)
        at Connection.emit (node:domain:489:12)
        at Connection.emit (C:\Users\berna\bloo\server\node_modules\tedious\src\connection.ts:1902:18)
        at RequestTokenHandler.onErrorMessage (C:\Users\berna\bloo\server\node_modules\tedious\src\token\handler.ts:388:21)
        at Readable.<anonymous> (C:\Users\berna\bloo\server\node_modules\tedious\src\token\token-stream-parser.ts:22:55)
        at Readable.emit (node:events:508:28)
        at Readable.emit (node:domain:489:12)
        at addChunk (node:internal/streams/readable:559:12)
        at readableAddChunkPushObjectMode (node:internal/streams/readable:536:3) {
      info: [ErrorMessageToken]
    },
    number: 3727,
    lineNumber: 1,
    state: undefined,
    class: 16,
    serverName: 'GRANDMA_XIAOXIN',
    procName: '',
    precedingErrors: [ [RequestError] ]
  },
  code: 'EREQUEST',
  originalError: Error: Could not drop constraint. See previous errors.
      at handleError (C:\Users\berna\bloo\server\node_modules\mssql\lib\tedious\request.js:382:19)
      at Connection.emit (node:events:508:28)
      at Connection.emit (node:domain:489:12)
      at Connection.emit (C:\Users\berna\bloo\server\node_modules\tedious\src\connection.ts:1902:18)
      at RequestTokenHandler.onErrorMessage (C:\Users\berna\bloo\server\node_modules\tedious\src\token\handler.ts:388:21)
      at Readable.<anonymous> (C:\Users\berna\bloo\server\node_modules\tedious\src\token\token-stream-parser.ts:22:55)
      at Readable.emit (node:events:508:28)
      at Readable.emit (node:domain:489:12)
      at addChunk (node:internal/streams/readable:559:12)
      at readableAddChunkPushObjectMode (node:internal/streams/readable:536:3) {
    info: ErrorMessageToken {
      name: 'ERROR',
      handlerName: 'onErrorMessage',
      number: 3727,
      state: 0,
      class: 16,
      message: 'Could not drop constraint. See previous errors.',
      serverName: 'GRANDMA_XIAOXIN',
      procName: '',
      lineNumber: 1
    }
  },
  number: 3727,
  lineNumber: 1,
  state: undefined,
  class: 16,
  serverName: 'GRANDMA_XIAOXIN',
  procName: '',
  precedingErrors: [
    RequestError: 'DF_222b9702c1d8fecb0470823350a' is not a constraint.
        at handleError (C:\Users\berna\bloo\server\node_modules\mssql\lib\tedious\request.js:384:15)
        at Connection.emit (node:events:508:28)
        at Connection.emit (node:domain:489:12)
        at Connection.emit (C:\Users\berna\bloo\server\node_modules\tedious\src\connection.ts:1902:18)
        at RequestTokenHandler.onErrorMessage (C:\Users\berna\bloo\server\node_modules\tedious\src\token\handler.ts:388:21)
        at Readable.<anonymous> (C:\Users\berna\bloo\server\node_modules\tedious\src\token\token-stream-parser.ts:22:55)
        at Readable.emit (node:events:508:28)
        at Readable.emit (node:domain:489:12)
        at addChunk (node:internal/streams/readable:559:12)
        at readableAddChunkPushObjectMode (node:internal/streams/readable:536:3) {
      code: 'EREQUEST',
      originalError: [Error],
      number: 3728,
      lineNumber: 1,
      state: 1,
      class: 16,
      serverName: 'GRANDMA_XIAOXIN',
      procName: ''
    }
  ]
}
Provision error: TypeORMError: Driver not Connected
    at SqlServerDriver.obtainMasterConnection (C:\Users\berna\bloo\server\node_modules\typeorm\src\driver\sqlserver\SqlServerDriver.ts:762:35)
    at SqlServerDriver.obtainSlaveConnection (C:\Users\berna\bloo\server\node_modules\typeorm\src\driver\sqlserver\SqlServerDriver.ts:774:46)
    at SqlServerQueryRunner.query (C:\Users\berna\bloo\server\node_modules\typeorm\src\driver\sqlserver\SqlServerQueryRunner.ts:219:31)
    at async SelectQueryBuilder.loadRawResults (C:\Users\berna\bloo\server\node_modules\src\query-builder\SelectQueryBuilder.ts:3868:25)
    at async SelectQueryBuilder.executeCountQuery (C:\Users\berna\bloo\server\node_modules\src\query-builder\SelectQueryBuilder.ts:3101:25)
    at async SelectQueryBuilder.getCount (C:\Users\berna\bloo\server\node_modules\src\query-builder\SelectQueryBuilder.ts:1786:29)
    at async C:\Users\berna\bloo\server\src\routes\setup.ts:46:23
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
Server is running heavily on http://localhost:4000
Initial Boot: Attempting to connect to active DB: sqlserver Setup Config
Successfully connected to sqlserver database!
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
Server is running heavily on http://localhost:4000
Initial Boot: Attempting to connect to active DB: sqlserver Setup Config
Successfully connected to sqlserver database!
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
C:\Users\berna\bloo\server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/services/dbManager.ts(113,100): error TS18046: 'err' is of type 'unknown'.

    at createTSError (C:\Users\berna\bloo\server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\berna\bloo\server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\berna\bloo\server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\berna\bloo\server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\berna\bloo\server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\berna\bloo\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 18046 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
Server is running heavily on http://localhost:4000
Initial Boot: Attempting to connect to active DB: sqlserver Setup Config
Successfully connected to sqlserver database!
Successfully connected to sqlserver database!
[Provision] Schema already seeded with 4 roles. Skipping sync.
[Setup] Attempting to create admin account: fulladmin1775631667014@bloo.local
[Setup] Successfully persisted admin account: fulladmin1775631667014@bloo.local (ID: usr_admin_1775631667037)
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
